--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,4 +1,5 @@
 body {
+    background-color: whitesmoke;
     background-image: url("https://images.pexels.com/photos/1034008/pexels-photo-1034008.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260");
-    background-size: contain;
+
 }
