--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -4,10 +4,15 @@
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
+#help {
+    width: 100%;
+    height: 100vh;
+    background-color: white;
+    background-size: cover;
+}
 
 body {
     background-color: white;
-
 }
 
 .col-md-6 {
