--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -27,14 +27,18 @@ h2 {
 }
 
 nav {
-    max-width: 960px;
+    width: 100%;
+    height: 80px;
+    background-color: #000;
+    line-height: 80 px;
     margin: 0 auto;
     padding: 10px 0;
     margin-right: 0%;
 }
 
 nav>ul {
-    text-align: left;
+    float: left;
+    margin-left: 30px;
 }
 
 nav>ul>li {
