--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -51,7 +51,7 @@ nav>ul>li>a {
     text-transform: uppercase;
     text-decoration: none;
     display: block;
-    color: black;
+    color: #fff;
 
 }
 
