--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -29,11 +29,10 @@ h2 {
 nav {
     width: 100%;
     height: 80px;
-    background-color: #000;
+    background-color: #0001;
     line-height: 80 px;
-    margin: 0 auto;
-    padding: 10px 0;
-    margin-right: 0%;
+    opacity: 0.4;
+
 }
 
 nav>ul {
@@ -57,7 +56,8 @@ nav>ul>li>a {
 
 nav>ul>li>a:hover {
     box-shadow: black;
-    background: grey;
+    background-color: hotpink;
+    transition: 0.8s all;
     color: black;
     text-decoration: none;
 }
