--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -4,15 +4,13 @@
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
-#help {
-    width: 100%;
-    height: 100vh;
-    background-color: white;
-    background-size: cover;
-}
 
 body {
-    background-color: white;
+    background-image: url("https://images.pexels.com/photos/590493/pexels-photo-590493.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260");
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 100%;
+
 }
 
 .col-md-6 {
@@ -29,35 +27,40 @@ h2 {
 nav {
     width: 100%;
     height: 80px;
-    background-color: #0001;
+    background-color: white;
     line-height: 80 px;
-    opacity: 0.4;
 
 }
 
 nav>ul {
-    float: left;
-    margin-left: 30px;
+    float: right;
+    margin-right: 30px;
 }
 
-nav>ul>li {
+nav ul li {
+    list-style-type: none;
     display: inline-block;
+    transition: 0.8s all;
 }
 
-nav>ul>li>a {
+nav ul li :hover {
+    color: yellow;
+}
+
+nav ul li a {
     padding: 18px;
     margin-right: 0;
     text-transform: uppercase;
     text-decoration: none;
     display: block;
-    color: #fff;
+    color: black;
 
 }
 
 nav>ul>li>a:hover {
     box-shadow: black;
     background-color: hotpink;
-    transition: 0.8s all;
+
     color: black;
     text-decoration: none;
 }
@@ -69,17 +72,9 @@ ol li {
 }
 
 a {
-    color: white;
+    color: black;
 }
 
 button {
-    background-color: blueviolet;
-}
-
-h1 {
-    max-width: 960px;
-    margin: 0 auto;
-    padding: 10px 0;
-    margin-right: 0%;
-    display: inline-block;
+    background-color: brown;
 }
