--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -6,17 +6,30 @@
 
 
 body {
-    background-image: url("https://images.pexels.com/photos/1319854/pexels-photo-1319854.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260");
-    background-repeat: no-repeat;
-    background-size: cover;
+    background-color: white;
     height: 100%;
 
 }
 
-.col-md-6 {
+.hope {
+    background-image: url("https://images.pexels.com/photos/33283/stack-of-books-vintage-books-book-books.jpg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260");
+    height: 800px;
+    text-align: center;
+    color: black;
 
-    border: 25px solid green;
-    border-style: dotted solid;
+}
+
+h1 {
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-size: 100px;
+    color: black;
+}
+
+p {
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-size: 20px;
+    color: black;
+}
 }
 
 h2 {
@@ -27,9 +40,11 @@ h2 {
 nav {
     width: 100%;
     height: 80px;
-    background-color: white;
+    background-color: #0009;
     line-height: 80 px;
-
+    background-size: cover;
+    height: 100px;
+    background-repeat: no-repeat;
 }
 
 nav>ul {
@@ -53,7 +68,7 @@ nav ul li a {
     text-transform: uppercase;
     text-decoration: none;
     display: block;
-    color: black;
+    color: white;
 
 }
 
@@ -79,7 +94,39 @@ button {
     background-color: brown;
 }
 
-.borrow {
-    background-color: white;
+#about {
+    background-image: url("https://images.pexels.com/photos/1112048/pexels-photo-1112048.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260");
+    height: 500px;
+    text-align: center;
+    color: white;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-size: 100px;
+}
 
+h5 {
+    text-align: center;
+    color: white;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-size: 100px;
+}
+
+h6 {
+    color: white;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-size: 20px;
+}
+
+h2 {
+    color: black;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-size: 30px;
+}
+
+#contacts {
+    background-color: grey;
+    height: 100px;
+    text-align: center;
+    color: white;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 100px;
 }
