--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -58,10 +58,6 @@ nav ul li {
     transition: 0.8s all;
 }
 
-nav ul li :hover {
-    color: yellow;
-}
-
 nav ul li a {
     padding: 18px;
     margin-right: 0;
@@ -74,7 +70,7 @@ nav ul li a {
 
 nav>ul>li>a:hover {
     box-shadow: black;
-    background-color: hotpink;
+    background-color: goldenrod;
 
     color: black;
     text-decoration: none;
@@ -91,7 +87,7 @@ a {
 }
 
 button {
-    background-color: brown;
+    background-color: #0006;
 }
 
 #about {
