--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -101,7 +101,7 @@ button {
 
 h5 {
     text-align: center;
-    color: white;
+    color: black;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     font-size: 100px;
 }
